manifests/istio/service_entry_oneagent.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - rrk74405.live.dynatrace.com
  - sg-us-east-1-3-214-132-231-prod36-virginia.live.ruxit.com
  - sg-us-east-1-3-212-180-195-prod36-virginia.live.ruxit.com
  - sg-us-east-1-54-88-209-127-prod36-virginia.live.ruxit.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: HTTPS
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - rrk74405.live.dynatrace.com
  - sg-us-east-1-3-214-132-231-prod36-virginia.live.ruxit.com
  - sg-us-east-1-3-212-180-195-prod36-virginia.live.ruxit.com
  - sg-us-east-1-54-88-209-127-prod36-virginia.live.ruxit.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - rrk74405.live.dynatrace.com
    route:
    - destination:
        host: rrk74405.live.dynatrace.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-us-east-1-3-214-132-231-prod36-virginia.live.ruxit.com
    route:
    - destination:
        host: sg-us-east-1-3-214-132-231-prod36-virginia.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-us-east-1-3-212-180-195-prod36-virginia.live.ruxit.com
    route:
    - destination:
        host: sg-us-east-1-3-212-180-195-prod36-virginia.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-us-east-1-54-88-209-127-prod36-virginia.live.ruxit.com
    route:
    - destination:
        host: sg-us-east-1-54-88-209-127-prod36-virginia.live.ruxit.com
        port:
          number: 443
          name: HTTPS
